--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,6 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +20,35 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+.block {
+  margin: 50px 0;
+  padding: 10px;
+  max-width: 100vw;
+  width: 100vw;
+  overflow-x: auto;
+  /* border: 1px solid black; */
+  min-height: 200px;
+  background-color: rgb(255, 255, 255);
+}
+
+.images-form {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  /* border: 1px solid black; */
+  border-radius: 5px;
+  margin: 25px 0;
+  gap: 10px;
+}
+
+.images-container {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
