--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,9 +7,9 @@
 @import url('./reset.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   font-weight: 400;
 
   color: #242424;
@@ -22,26 +22,44 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.block {
-  margin: 50px 0;
-  padding: 10px;
-  max-width: 100vw;
-  width: 100vw;
-  overflow-x: auto;
-  /* border: 1px solid black; */
-  min-height: 200px;
-  background-color: rgb(255, 255, 255);
+input,
+button {
+  font-family: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  font-size: inherit;
 }
 
 .images-form {
-  width: 250px;
+  width: 371px;
   display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  /* border: 1px solid black; */
-  border-radius: 5px;
-  margin: 25px 0;
-  gap: 10px;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 36px;
+  margin-bottom: 32px;
+  gap: 8px;
+}
+
+.images-form-input {
+  width: 272px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  color: #808080;
+  letter-spacing: 0.04em;
+}
+
+.images-form-button {
+  border-radius: 8px;
+  background: #4e75ff;
+  padding: 8px 16px;
+  color: #fff;
+  letter-spacing: 0.04em;
+  border: none;
+}
+
+.images-form-button:hover {
+  background-color: #6c8cff;
 }
 
 .images-container {
