--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,9 +34,7 @@ button {
   width: 371px;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
-  margin-top: 36px;
-  margin-bottom: 32px;
+  margin: 36px auto 32px;
   gap: 8px;
 }
 
@@ -62,11 +60,74 @@ button {
   background-color: #6c8cff;
 }
 
-.images-container {
+/* .images-container {
   width: fit-content;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 10px;
+} */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0px 156px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
+  gap: 24px;
+}
+
+.gallery-item {
+  flex-basis: calc((100% - 2 * 24px) / 3);
+  height: 200px;
+  border: 1px solid #808080;
+  text-align: center;
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery-item:hover {
+  cursor: pointer;
+  scale: 1.05;
+}
+
+.gallery-image-container {
+  width: 100%;
+  height: 152px;
+  overflow: hidden;
+  position: relative;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.property-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 4px 20px;
+}
+
+.property {
+  color: #2e2f42;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+}
+
+.value {
+  display: block;
+  color: #2e2f42;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
