--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,14 +60,6 @@ button {
   background-color: #6c8cff;
 }
 
-/* .images-container {
-  width: fit-content;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-} */
-
 * {
   box-sizing: border-box;
 }
@@ -111,23 +103,55 @@ body {
 }
 
 .property-container {
+  height: 48px;
+  padding: 4px 20px;
   display: flex;
   justify-content: space-between;
-  padding: 4px 20px;
 }
 
 .property {
-  color: #2e2f42;
   font-size: 12px;
   font-weight: 600;
   line-height: 1.33;
   letter-spacing: 0.04em;
+  color: #2e2f42;
 }
 
-.value {
+.keys {
   display: block;
-  color: #2e2f42;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 3px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: '';
+  position: absolute;
+  box-sizing: border-box;
+  left: 20px;
+  top: 31px;
+  border: 10px solid transparent;
+  border-right-color: #fff;
+  transform: rotate(-40deg);
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
